assets/stylesheets/content.css
.content-container{
	width: 100vw;
	height: 85vh;
	background: linear-gradient(rgba(1, 0, 5, .7), rgba(45, 16, 14, .8));
	border-top: 3px inset #000;
	border-bottom: .1px solid #000;
	z-index: 1000;
}

.content-background{
	width: 100%;
	/*height: 100%;*/
	background: url('../images/jukebox-bg.jpeg');
	background-size: cover;
}

.jukebox-area{
	width: 60vw;
	display: inline-block;
	float: left;
}

/*.controls-container{
	width: 0em;
	background: green;
	text-align: center;
	margin: 12vh 0;
	/*background: rgba(16, 37, 66, .6);*/
	/*background: RGBA(224, 226, 219, 1.00);*/

.controls{
	width: 6em;
	height: 6em;
	background: none;
	display: inline-block;
}

/*#player-info{
	width: 10em;
	height: 3em;
	text-align: center;
	font-size: 2em;
}*/

.player-wrap{
	width: 100%;
	/*height: 14em;*/
	margin: 8vh 0;
	/*margin-bottom: 2em;*/
	background: rgba(16, 37, 66, .6);
	/*overflow: scroll;*/
}

#playlist-ul{
	width: 20em;
	height: 14em;
	list-style: none;
	margin: 0 auto;
	border: .1px solid #000;
	overflow: scroll;
	padding: .25em .8em .25em .8em;
	background: RGBA(251, 252, 255, .8);
}

.playlist-item{
	display: block;
	width: 18em;
	padding: .1em;
	color: #010005;
	font-size: 1.1em;
}

#playlist-ul a{
	text-decoration: none;
}

.player-description{
	width: 98%;
	color: #fff;
	margin: 2vh auto;
}

.bio-wrapper{
	width: 40vw;
	height: 100%;
	background: rgba(16, 37, 66, .6);
	color: RGBA(251, 252, 255, 1.00);
	display: inline-block;
	border-bottom: 1px solid #000;
	overflow: scroll;
}

.headshot{
	width: 100%;
	text-align: center;
}

.headshot img{
	width: 7em;
	height: 7em;
	border-radius: 50%;
	margin: 11.5vh 0 2.8vh 0;
}

.bio{
	width: 23em;
	margin: 0 auto;	
	letter-spacing: 2px;
}

.bio p{
	font-size: 1.3em;
	line-height: 1.4em;
	margin: .6em 0;
	text-shadow: -1px 0 #000, 1px 0 #000, 1px 0 #000, -1px 0 #000;
}

/*@media(min-width: 997px){*/

@media screen and (min-width: 800px){
	.content-container{
		width: 100vw;
		/*height: 100vh;*/
		background: linear-gradient(rgba(1, 0, 5, .7), rgba(45, 16, 14, .8));
		border-top: 3px inset #000;
		z-index: 1000;
	}

	.jukebox-area{
		width: 60vw;
		display: inline-block;
		float: left;
	}

	.controls-container{
		width: 100%;
		text-align: center;
		margin: 9vh auto;
		border-radius: 1.3em;
		/*background: green;*/
	}

	.controls{
		width: 6em;
		height: 6em;
		background: none;
		display: inline-block;
	}

	#player-info{
		width: 10em;
		height: 3em;
		text-align: center;
		font-size: 2em;
	}

	.player-wrap{
		width: 100%;
		/*height: 14em;*/
		margin-top: 8vh;
		margin-bottom: 2em;
		background: rgba(16, 37, 66, .6);
		/*overflow: scroll;*/
	}

	#playlist-ul{
		width: 20em;
		height: 14em;
		list-style: none;
		margin: 0 auto;
		border: .1px solid #000;
		overflow: scroll;
		padding: .25em .8em .25em .8em;
		background: RGBA(251, 252, 255, .8);
	}

	.playlist-item{
		display: block;
		width: 18em;
		padding: .1em;
		color: #010005;
		/*font-size: 1.1em;*/
	}

	#playlist-ul a{
		text-decoration: none;
	}

	.player-description{
		width: 23em;
		/*text-align: center;*/
		color: #fff;
		margin: 0 auto;
	}

	.bio-wrapper{
		width: 40vw;
		height: 100%;
		background: rgba(16, 37, 66, .6);
		color: RGBA(251, 252, 255, 1.00);
		display: inline-block;
	}

	.headshot{
		width: 100%;
		text-align: center;
	}

	.headshot img{
		width: 7em;
		height: 7em;
		border-radius: 50%;
		margin: 3vh 0;
	}

	.bio{
		width: 23em;
		margin: 0 auto;	
		letter-spacing: 2px;
	}

	.bio p{
		font-size: 1.3em;
		line-height: 1.4em;
		margin: 1em 0;
		text-shadow: -1px 0 #000, 1px 0 #000, 1px 0 #000, -1px 0 #000;
	}
}

